se agrega titulo faltante

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
 
         <div class="logo"></div>
+        <p class="titulo">Maricopa Inn</p>
 
         <div class="imagenes">
             <a class="elevador" id="img1" href="img/1.jpg" data-lightbox="example-1"></a>
