Se actualizan textos

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <div class="logo"></div>
         <p class="titulo">Maricopa Inn</p>
+        <p class="subTitulo">Proximamente</p>
 
         <div class="imagenes">
             <a class="elevador" id="img1" href="img/1.jpg" data-lightbox="example-1"></a>
